--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,34 @@
-.navbar {
-  background-color: rgb(252, 202, 189);
-  display: flex;
-  justify-content: center;
+:root {
+  --light-pink: #f5dedb;
+  --dark-pink: #f364ab;
+}
+* {
+  background-color: var(--light-pink);
+  margin: 0;
+  padding: 0;
 }
 
+.wrapper {
+  min-height: 80px;
+  background-color: var(--light-pink);
+  font-family: "Merriweather", serif;
+  color: rgb(52, 18, 27);
+}
 .main {
+  font-family: "DM Serif Display", serif;
+  font-size: 60px;
+}
+.navbar-nav {
+  font-weight: 400;
+}
+.nancy-img {
+  border-radius: 50%;
   display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin-top: 50px;
+  margin: auto;
+  border: 1px solid rgb(244, 35, 150);
+  padding: 7px;
 }
 
-.main div {
-  margin: 10px;
-  font-size: 60px;
-  font-family: "Caveat", cursive;
-}
 .buttons {
   display: flex;
   justify-content: center;
