--- a/src/component/goUp.css
+++ b/src/component/goUp.css
@@ -1,8 +1,8 @@
 .up {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
-  background: white;
+  right: 100px;
+  bottom: 60px;
+  background: rgb(207, 162, 235);
   width: 50px;
   height: 50px;
   border-radius: 50%;
